--- a/index.html
+++ b/index.html
@@ -8,7 +8,12 @@
     <title>Dad Jokes</title>
   </head>
   <body>
-    <h1>Project Starter</h1>
+    <div class="container">
+      <h3>Try not to laugh</h3>
+      <div id="joke" class="joke">//Joke hre</div>
+
+      <button id="jokeBtn" class="btn">Get Another Joke!</button>
+    </div>
 
     <script src="./script.js"></script>
   </body>
