--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <div class="container">
       <h3>Try not to laugh</h3>
-      <div id="joke" class="joke">//Joke goes here</div>
+      <div id="joke" class="joke"></div>
 
       <button id="jokeBtn" class="btn">Get Another Joke!</button>
     </div>
